# imx-smart-fitness

./: .gitignore  CMakeLists.txt  README.md  SW-Content-Register.txt
licenses/: LGPL-2.1-only.txt  MIT.txt
models/: README.md  generate_anchors.py  preprocess_data.py  recipe.sh  requirements_tf.txt
models/data/: coco_calib_images.txt
src/: CMakeLists.txt  main.cc
src/cargs/: CMakeLists.txt  cargs.c  cargs.h
src/classifier/: CMakeLists.txt  classification_result.cc  classification_result.h  classification_smoothing.cc  classification_smoothing.h  pose_classification.cc  pose_classification.h  pose_embedding.cc  pose_embedding.h  pose_sample.cc  pose_sample.h  repetition_counter.cc  repetition_counter.h
src/mediapipe/: CMakeLists.txt  pose_detection_interpreter.cc  pose_detection_interpreter.h  pose_landmark_interpreter.cc  pose_landmark_interpreter.h
src/utils/: CMakeLists.txt  bounding_box.cc  bounding_box.h  ema_filter.cc  ema_filter.h  keypoint.cc  keypoint.h  pose_detection.cc  pose_detection.h  pose_landmark.cc  pose_landmark.h
